--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Sketch</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/reglo" type="text/css"/>
 
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
